set the site right!

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -3,26 +3,12 @@
   "localized-strings": {
     "next": "Next",
     "previous": "Previous",
-    "tagline": "A Simple Archiver for Qt Projects.",
-    "AddingQArchive": "Add QArchive to Your Qt Project",
-    "Adding QArchive to Your Qt Project": "Adding QArchive to Your Qt Project",
+    "tagline": "A Elegant Bridge to Qt Installer Framework.",
     "Installation": "Installation",
-    "QArchiveCompressor": "Class QArchive::Compressor",
-    "QArchive::Compressor": "QArchive::Compressor",
-    "QArchiveErrorCodes": "QArchive error codes",
-    "QArchive error codes": "QArchive error codes",
-    "QArchiveExtractor": "Class QArchive::Extractor",
-    "QArchive::Extractor": "QArchive::Extractor",
-    "QArchiveFormats": "QArchive Supported Compression Formats",
-    "QArchive Compression Formats": "QArchive Compression Formats",
-    "QArchiveReader": "Class QArchive::Reader",
-    "QArchive::Reader": "QArchive::Reader",
-    "UsingCompressor": "Using QArchive to Compress a set of files",
-    "Compressing files with QArchive": "Compressing files with QArchive",
-    "UsingExtractor": "Using QArchive to Extract Archives",
-    "Extracting Archives with QArchive": "Extracting Archives with QArchive",
-    "UsingReader": "Using QArchive to Read Archives",
-    "Reading Archives using QArchive.": "Reading Archives using QArchive.",
+    "QInstallerBridgeErrorCodes": "Dealing with errors on QInstallerBridge",
+    "QInstallerBridge Error Codes": "QInstallerBridge Error Codes",
+    "UsingInstallerBridge": "Using QInstallerBridge for a simple AutoUpdate!",
+    "Simple QInstallerBridge Usage": "Simple QInstallerBridge Usage",
     "Docs": "Docs",
     "Help": "Help",
     "Blog": "Blog",
