--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -4,9 +4,15 @@
     "next": "Next",
     "previous": "Previous",
     "tagline": "A Elegant Bridge to Qt Installer Framework.",
+    "AddingQInstallerBridge": "Add QInstallerBridge to Your Qt Project",
+    "Adding to Your Qt Project": "Adding to Your Qt Project",
+    "ClassQInstallerBridge": "Class QInstallerBridge",
+    "Class QInstallerBridge": "Class QInstallerBridge",
     "Installation": "Installation",
     "QInstallerBridgeErrorCodes": "Dealing with errors on QInstallerBridge",
     "QInstallerBridge Error Codes": "QInstallerBridge Error Codes",
+    "StructurePackageUpdate": "struct QInstallerBridge::PackageUpdate",
+    "struct QInstallerBridge::PackageUpdate": "struct QInstallerBridge::PackageUpdate",
     "UsingInstallerBridge": "Using QInstallerBridge for a simple AutoUpdate!",
     "Simple QInstallerBridge Usage": "Simple QInstallerBridge Usage",
     "Docs": "Docs",
